--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -94,6 +94,7 @@
 <!ENTITY Ctr_appbuttonc_pu	"Lilla knap">
 <!ENTITY Ctr_appbuttonc_wh	"Hvid knap">
 <!ENTITY Ctr_appbuttonc_cu	"Tilpas knappens farve">
+<!ENTITY Ctr_appbuttonct	"Custom button color for button on toolbar">
 <!ENTITY Ctr_appbuttonI1	"Genstart anbefales">
 <!ENTITY Ctr_appbuttonI1e	"Ikke synlig i Windows OS-titellinjen, kun i &brandShortName;-titellinjen!">
 <!ENTITY Ctr_appbuttonI2	"Farverne på knapperne er kun synlige i titellinjen og fanebladslinjen!">
