--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -94,6 +94,7 @@
 <!ENTITY Ctr_appbuttonc_pu	"Lillat värvi nupp">
 <!ENTITY Ctr_appbuttonc_wh	"Valget värvi nupp">
 <!ENTITY Ctr_appbuttonc_cu	"Kohandatud värvi nupp">
+<!ENTITY Ctr_appbuttonct	"Custom button color for button on toolbar">
 <!ENTITY Ctr_appbuttonI1	"Taaskäivitamine soovitatav">
 <!ENTITY Ctr_appbuttonI1e	"Nähtav ainult &brandShortName;i tiitliribal, mitte Windows OS-i tiitliribal!">
 <!ENTITY Ctr_appbuttonI2	"Nupuvärvid on nähtavad ainult siis, kui see asub tiitliribal või kaartide ribal!">
