--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -94,6 +94,7 @@
 <!ENTITY Ctr_appbuttonc_pu	"Pulsante viola">
 <!ENTITY Ctr_appbuttonc_wh	"Pulsante bianco">
 <!ENTITY Ctr_appbuttonc_cu	"Colore personalizzato">
+<!ENTITY Ctr_appbuttonct	"Custom button color for button on toolbar">
 <!ENTITY Ctr_appbuttonI1	"riavvio consigliato">
 <!ENTITY Ctr_appbuttonI1e	"Visibile solo nella barra del titolo di &brandShortName; e non in quella di Windows.">
 <!ENTITY Ctr_appbuttonI2	"Colorato solo nella barra del titolo e nella barra delle schede.">
