--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -94,6 +94,7 @@
 <!ENTITY Ctr_appbuttonc_pu	"Botão Roxo">
 <!ENTITY Ctr_appbuttonc_wh	"Botão Branco">
 <!ENTITY Ctr_appbuttonc_cu	"Cor do Botão Personalizada">
+<!ENTITY Ctr_appbuttonct	"Custom button color for button on toolbar">
 <!ENTITY Ctr_appbuttonI1	"Recomenda-se Reiniciar">
 <!ENTITY Ctr_appbuttonI1e	"Invisível na Barra de Título do Sistema Operacional">
 <!ENTITY Ctr_appbuttonI2	"Colorido só nas Barras de Título e de Abas!">
