--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -94,6 +94,7 @@
 <!ENTITY Ctr_appbuttonc_pu	"Mor Buton Rengi">
 <!ENTITY Ctr_appbuttonc_wh	"Beyaz Buton Rengi">
 <!ENTITY Ctr_appbuttonc_cu	"Özel Buton Rengi">
+<!ENTITY Ctr_appbuttonct	"Custom button color for button on toolbar">
 <!ENTITY Ctr_appbuttonI1	"Yeniden başlatma tavsiye edilir">
 <!ENTITY Ctr_appbuttonI1e	"Windows başlık çubuğunda görünür değil!">
 <!ENTITY Ctr_appbuttonI2	"Sadece buton renkleri görünür">
