--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -94,6 +94,7 @@
 <!ENTITY Ctr_appbuttonc_pu	"Фіолетова кнопка">
 <!ENTITY Ctr_appbuttonc_wh	"Біла кнопка">
 <!ENTITY Ctr_appbuttonc_cu	"Вибрати колір кнопки">
+<!ENTITY Ctr_appbuttonct	"Custom button color for button on toolbar">
 <!ENTITY Ctr_appbuttonI1	"рекомендовано перезапуск">
 <!ENTITY Ctr_appbuttonI1e	"Не видно в рядку заголовку Windows OS, тільки в &brandShortName; заголовку!">
 <!ENTITY Ctr_appbuttonI2	"Кольори кнопок видимі тільки на панелях заголовку і вкладок!">
