--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -94,6 +94,7 @@
 <!ENTITY Ctr_appbuttonc_pu	"紫色按钮">
 <!ENTITY Ctr_appbuttonc_wh	"白色按钮">
 <!ENTITY Ctr_appbuttonc_cu	"自定义按钮颜色">
+<!ENTITY Ctr_appbuttonct	"Custom button color for button on toolbar">
 <!ENTITY Ctr_appbuttonI1	"建议重启浏览器">
 <!ENTITY Ctr_appbuttonI1e	"在 Windows 系统标题栏上不可见，仅在 &brandShortName; 标题栏上!">
 <!ENTITY Ctr_appbuttonI2	"按钮颜色只在标题栏与标签页栏上可见!">
@@ -164,10 +165,10 @@
 <!ENTITY Ctr_addonversion	"附加组件页面: 显示附加组件版本">
 <!ENTITY Ctr_xpinstallui	"附加组件管理器: 旧式附加组件安装窗口(about:config 选项)">
 <!ENTITY Ctr_bmbutton		"书签菜单按钮">
-<!ENTITY Ctr_bmbutpanelm	"Popup: 面板式菜单外观">
-<!ENTITY Ctr_bmbunsortbm	"Popup: “未分类书签”子菜单">
-<!ENTITY Ctr_bmbviewbmtb	"Popup: 显示“查看工具栏”">
-<!ENTITY Ctr_bmbnounsort	"Popup: 隐藏“未分类书签”">
+<!ENTITY Ctr_bmbutpanelm	"弹出式菜单: 面板式菜单外观">
+<!ENTITY Ctr_bmbunsortbm	"弹出式菜单: “未分类书签”子菜单">
+<!ENTITY Ctr_bmbviewbmtb	"弹出式菜单: 显示“查看工具栏”">
+<!ENTITY Ctr_bmbnounsort	"弹出式菜单: 隐藏“未分类书签”">
 <!ENTITY Ctr_bmbutnotext	"隐藏书签工具栏上的文本标签">
 <!ENTITY Ctr_skipprintpr	"打印按钮: 跳过打印预览">
 <!ENTITY Ctr_tbconmenu		"工具栏右键菜单: 隐藏 “移动到菜单”, “从工具栏移除”, “重新载入所有标签页/将全部标签页加为书签” 与 “恢复关闭的标签页”">
