--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -94,6 +94,7 @@
 <!ENTITY Ctr_appbuttonc_pu	"Vijolična barva gumba">
 <!ENTITY Ctr_appbuttonc_wh	"Bela barva gumba">
 <!ENTITY Ctr_appbuttonc_cu	"Barva gumba po meri">
+<!ENTITY Ctr_appbuttonct	"Custom button color for button on toolbar">
 <!ENTITY Ctr_appbuttonI1	"Priporočen je ponovni zagon">
 <!ENTITY Ctr_appbuttonI1e	"Ni viden na orodni vrstici OS-a Windows, samo na orodni vrstici &brandShortName;a!">
 <!ENTITY Ctr_appbuttonI2	"Barve gumba so vidne samo na nazivni vrstici in vrstici zavihkov!">
