--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -219,7 +219,7 @@
 <!ENTITY Ctr_hideurelstop	"Entferne 'Stopp' &amp; 'Neu laden'">
 <!ENTITY Ctr_hideurlgo		"Entferne 'Los'">
 <!ENTITY Ctr_hideurlsrg		"Entferne 'Neu laden, Stopp &amp; Los' Trennlinien &amp; Leerstellen">
-<!ENTITY Ctr_urlbardropm	"Verschiebe die 'Schaltfläche' ans Ende der Adressleiste">
+<!ENTITY Ctr_urlbardropm	"Verschiebe die 'Schaltfläche' an die letztmögliche Position">
 <!ENTITY Ctr_altreaderico	"Alternative Symbole für die 'Lese-Modus'-Schaltfläche">
 <!ENTITY Ctr_hideprbutton	"Verstecke 'Infosymbol' (wenn ein Popup-Fenster blockiert wurde)">
 <!ENTITY Ctr_locsearchbw10	"Höhe der Adress- und Suchleiste reduzieren (experimentell)">
@@ -237,7 +237,7 @@
 <!ENTITY Ctr_icopageinfo	"Ein Klick auf das Symbol öffnet das 'Seiteninfo'-Fenster">
 <!ENTITY Ctr_lbsbsize		"Benutzerdefinierte Breite für die Adressleiste und die Suchleiste">
 <!ENTITY Ctr_searchbar		"Suchleiste">
-<!ENTITY Ctr_lbsugresi		"Bildlaufleiste aus dem Aufklappmenü entfernen">
+<!ENTITY Ctr_lbsugresi		"Ergebnisse im Aufklappmenü möglichst ohne Bildlaufleiste anzeigen">
 <!ENTITY Ctr_lbsugres		"Anzahl der Ergebnisse im Aufklappmenü (about:config Einstellung)">
 
 <!ENTITY Ctr_menubar_items	"Position der Menüeinträge">
