--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -219,7 +219,7 @@
 <!ENTITY Ctr_hideurelstop	"Tłóčatce Stój a Znowa adresowych lajstow schować">
 <!ENTITY Ctr_hideurlgo		"Tłóčatko 'Start' schować">
 <!ENTITY Ctr_hideurlsrg		"Dźělatka a mjezery za tłošatka 'Znowa, Stój a Start' schować">
-<!ENTITY Ctr_urlbardropm	"Tłóčatko na kónc adresoweho pola přesunyć">
+<!ENTITY Ctr_urlbardropm	"Move dropmarker to the last possible position">
 <!ENTITY Ctr_altreaderico	"Alternatine 'čitakowe' symbolei">
 <!ENTITY Ctr_hideprbutton	"Zdźělenski symbol schować, hdyž so wuskakowace wokno blokuje">
 <!ENTITY Ctr_locsearchbw10	"Wysokosć adresowych a pytanskich polow redukować (eksperimentelne)">
@@ -237,7 +237,7 @@
 <!ENTITY Ctr_icopageinfo	"Kliknjenje na symbol wočinja wokno 'Info wo stronje'">
 <!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
 <!ENTITY Ctr_searchbar		"Search bar">
-<!ENTITY Ctr_lbsugresi		"Remove scrollbar from suggestions popup">
+<!ENTITY Ctr_lbsugresi		"Display as many results in suggestions popup as possible (without scroolbar)">
 <!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Pozicija menijowych zapiskow">
