--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -219,7 +219,7 @@
 <!ENTITY Ctr_hideurelstop	"Απόκρυψη κουμπιών «Διακοπή» &amp; «Ανανέωση»">
 <!ENTITY Ctr_hideurlgo		"Απόκρυψη κουμπιού «Μετάβαση»">
 <!ENTITY Ctr_hideurlsrg		"Απόκρυψη διαχωριστικών &amp; διαστημάτων κουμπιών «Ανανέωση», «Διακοπή» &amp; «Μετάβαση»">
-<!ENTITY Ctr_urlbardropm	"Μετακίνηση του δείκτη ανάπτυξης στο τέλος της γραμμής τοποθεσιών">
+<!ENTITY Ctr_urlbardropm	"Move dropmarker to the last possible position">
 <!ENTITY Ctr_altreaderico	"Εναλλακτικά εικονίδια «λειτουργίας ανάγνωσης»">
 <!ENTITY Ctr_hideprbutton	"Απόκρυψη εικονιδίου ειδοποίησης φραγής αναδυόμενου παραθύρου">
 <!ENTITY Ctr_locsearchbw10	"Μείωση ύψους γραμμών τοποθεσιών και αναζήτησης (πειραματικό)">
@@ -237,7 +237,7 @@
 <!ENTITY Ctr_icopageinfo	"Άνοιγμα παραθύρου «Πληροφορίες σελίδας» με κλικ στο ικονίδιο">
 <!ENTITY Ctr_lbsbsize		"Προσαρμοσμένο εύρος γραμμών διευθύνσεων και αναζήτησης">
 <!ENTITY Ctr_searchbar		"Γραμμή αναζήτησης">
-<!ENTITY Ctr_lbsugresi		"Remove scrollbar from suggestions popup">
+<!ENTITY Ctr_lbsugresi		"Display as many results in suggestions popup as possible (without scroolbar)">
 <!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Θέση στοιχείων μενού της εργαλειοθήκης μενού">
