--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -219,7 +219,7 @@
 <!ENTITY Ctr_hideurelstop	"Ocultar botones 'Parar y Recargar'">
 <!ENTITY Ctr_hideurlgo		"Ocultar botón 'Ir'">
 <!ENTITY Ctr_hideurlsrg		"Ocultar separadores y espacios del botón 'Recargar, Parar e Ir'">
-<!ENTITY Ctr_urlbardropm	"Mover flecha de despliegue al final de barras de direcciones">
+<!ENTITY Ctr_urlbardropm	"Move dropmarker to the last possible position">
 <!ENTITY Ctr_altreaderico	"Iconos de 'Vista de lectura' alternativos">
 <!ENTITY Ctr_hideprbutton	"Ocultar icono de notificación cuando se bloquee una ventana emergente">
 <!ENTITY Ctr_locsearchbw10	"Reducir altura de la barra de direcciones y el recuadro de búsqueda (experimental)">
@@ -237,7 +237,7 @@
 <!ENTITY Ctr_icopageinfo	"Hacer clic en el icono abre la ventana 'Información de la página'">
 <!ENTITY Ctr_lbsbsize		"Ancho personalizado para barra de direcciones y recuadro de búsqueda">
 <!ENTITY Ctr_searchbar		"Recuadro de búsqueda">
-<!ENTITY Ctr_lbsugresi		"Remove scrollbar from suggestions popup">
+<!ENTITY Ctr_lbsugresi		"Display as many results in suggestions popup as possible (without scroolbar)">
 <!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Posición de los elementos del menú">
