--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -219,7 +219,7 @@
 <!ENTITY Ctr_hideurelstop	"Masquer 'stop-actualiser'">
 <!ENTITY Ctr_hideurlgo		"Masquer le bouton 'aller à'">
 <!ENTITY Ctr_hideurlsrg		"Cacher les séparateurs de boutons 'actualiser, stop &amp; aller à' &amp; espaces">
-<!ENTITY Ctr_urlbardropm	"Placer le dropmarker à la fin de la barre d'adresse">
+<!ENTITY Ctr_urlbardropm	"Move dropmarker to the last possible position">
 <!ENTITY Ctr_altreaderico	"Alternative 'Reader' icons">
 <!ENTITY Ctr_hideprbutton	"Masquer l'icône de notification quand un pop-up est bloqué">
 <!ENTITY Ctr_locsearchbw10	"Reduce location bars and search bars height (experimental)">
@@ -237,7 +237,7 @@
 <!ENTITY Ctr_icopageinfo	"Un clic sur l'icône ouvre la 'page info'">
 <!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
 <!ENTITY Ctr_searchbar		"Search bar">
-<!ENTITY Ctr_lbsugresi		"Remove scrollbar from suggestions popup">
+<!ENTITY Ctr_lbsugresi		"Display as many results in suggestions popup as possible (without scroolbar)">
 <!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Position de la barre de menus">
