Revert "locale again"
This reverts commit a9ada7ce08d351ae9881dbcddc4b1dddc287e68c.

--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -237,7 +237,7 @@
 <!ENTITY Ctr_icopageinfo	"Hacer clic en el icono abre la ventana 'Información de la página'">
 <!ENTITY Ctr_lbsbsize		"Ancho personalizado para barra de direcciones y recuadro de búsqueda">
 <!ENTITY Ctr_searchbar		"Recuadro de búsqueda">
-<!ENTITY Ctr_lbsugresi		"Display as many results in suggestions popup as possible (without scrollbar)">
+<!ENTITY Ctr_lbsugresi		"Display as many results in suggestions popup as possible (without scroolbar)">
 <!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Posición de los elementos del menú">
