--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -237,7 +237,7 @@
 <!ENTITY Ctr_icopageinfo	"点击图标打开“页面信息”窗口">
 <!ENTITY Ctr_lbsbsize		"自定义地址栏和搜索栏的宽度">
 <!ENTITY Ctr_searchbar		"搜索栏">
-<!ENTITY Ctr_lbsugresi		"Display as many results in suggestions popup as possible (without scrollbar)">
+<!ENTITY Ctr_lbsugresi		"Display as many results in suggestions popup as possible (without scroolbar)">
 <!ENTITY Ctr_lbsugres		"建议弹出框中的结果个数(about:config 选项)">
 
 <!ENTITY Ctr_menubar_items	"菜单项目位置">
