--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -168,7 +168,7 @@
 <!ENTITY Ctr_bmbutpanelm	"Pojavna okna: videz ploščastega menija">
 <!ENTITY Ctr_bmbunsortbm	"Pojavna okna: podmeni 'nerazvrščeni zaznamki'">
 <!ENTITY Ctr_bmbviewbmtb	"Pojavna okna: prikaži 'Orodno vrstico pogledov'">
-<!ENTITY Ctr_bmbnounsort	"Pojavna okna: skrij 'nerzavrščeni zaznamki'">
+<!ENTITY Ctr_bmbnounsort	"Pojavna okna: skrij 'nerazvrščeni zaznamki'">
 <!ENTITY Ctr_bmbutnotext	"Skrij oznako na vrstici zaznamkov">
 <!ENTITY Ctr_skipprintpr	"Gumb Natisni: preskoči predogled tiskanja">
 <!ENTITY Ctr_tbconmenu		"Vsebinski meni orodne vrstice: skrij 'Premakni v meni', 'Odstrani iz orodne vrstice', 'Ponovno naloži vse zavihke', 'Dodaj vse zavihke med zaznamke' in 'Ponovno odpri zavihek'">
