--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -94,7 +94,7 @@
 <!ENTITY Ctr_appbuttonc_pu	"紫色按钮">
 <!ENTITY Ctr_appbuttonc_wh	"白色按钮">
 <!ENTITY Ctr_appbuttonc_cu	"自定义按钮颜色">
-<!ENTITY Ctr_appbuttonct	"Custom button color for button on toolbar">
+<!ENTITY Ctr_appbuttonct	"自定义工具柆上的按钮颜色">
 <!ENTITY Ctr_appbuttonI1	"建议重启浏览器">
 <!ENTITY Ctr_appbuttonI1e	"在 Windows 系统标题栏上不可见，仅在 &brandShortName; 标题栏上!">
 <!ENTITY Ctr_appbuttonI2	"按钮颜色只在标题栏与标签页栏上可见!">
@@ -219,7 +219,7 @@
 <!ENTITY Ctr_hideurelstop	"隐藏停止和重新载入按钮">
 <!ENTITY Ctr_hideurlgo		"隐藏 “转到” 按钮">
 <!ENTITY Ctr_hideurlsrg		"隐藏 “重新载入，停止和转到” 按钮的分隔符与空白">
-<!ENTITY Ctr_urlbardropm	"Move dropmarker to the last possible position">
+<!ENTITY Ctr_urlbardropm	"尽可能移动下拉按钮到最后的位置">
 <!ENTITY Ctr_altreaderico	"备选的 “阅读模式” 图标">
 <!ENTITY Ctr_hideprbutton	"当弹出窗口被阻止时隐藏通知图标">
 <!ENTITY Ctr_locsearchbw10	"减小地址栏与搜索栏高度(实验性)">
@@ -237,7 +237,7 @@
 <!ENTITY Ctr_icopageinfo	"点击图标打开“页面信息”窗口">
 <!ENTITY Ctr_lbsbsize		"自定义地址栏和搜索栏的宽度">
 <!ENTITY Ctr_searchbar		"搜索栏">
-<!ENTITY Ctr_lbsugresi		"Display as many results in suggestions popup as possible (without scrollbar)">
+<!ENTITY Ctr_lbsugresi		"尽可能在建议弹出框中多显示结果 (不带滚动条)">
 <!ENTITY Ctr_lbsugres		"建议弹出框中的结果个数(about:config 选项)">
 
 <!ENTITY Ctr_menubar_items	"菜单项目位置">
